spacing fixed.

--- a/src/components/pages/MediaCodexPage/MediaCodexPage.scss
+++ b/src/components/pages/MediaCodexPage/MediaCodexPage.scss
@@ -25,6 +25,8 @@
 
 .mediacodexpage {
 
+  margin-bottom: 6em;
+
 
   .lossy {
     color: var(--lossy-color);
